Add first load Disney example, and using Java Record